# ferme-ta-gueule

./: .dockerignore  .gitignore  Dockerfile  README.md  docker_run.sh  ferme-ta-gueule.py  ftg.sh  install.sh  pyproject.toml  requirements.txt  setup.py  setup.sh
.github/workflows/: docker-image.yml  docker-publish.yml  python-app.yml
