[tool.skjold]
sources = ["pyup"]  # Sources to check against.
report-only = true                         # Report only, always exit with zero.
report-format = 'json'                     # Output findings as `json`. Default is 'cli'.
cache_dir = '.skylt_cache'                 # Cache location (default: `~/.skjold/cache`).
cache_expires = 86400                      # Cache max. age.
verbose = true                             # Be verbose.


[tool.poetry]
name = "ferme-ta-gueule"
version = "2.0.0"
description = ""
authors = ["Grégory Duchatelet <greg@easyflirt.com>"]
packages = [
    { include = "ferme-ta-gueule.py" }
]

[tool.poetry.scripts]
ftg = "ferme-ta-gueule:main"

[tool.poetry.dependencies]
python = "^3.7.3"
termcolor = "^1.1.0"
elasticsearch = "^7.14.0"
requests = "^2.31.0"
setuptools = "^65.3.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
